--- a/mr2_arm_fw/CMakeLists.txt
+++ b/mr2_arm_fw/CMakeLists.txt
@@ -44,7 +44,10 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
-    # Add user sources here
+    Core/Src/app_can.c
+    Core/Src/app_encoder.c
+    Core/Src/app_limit_switch.c
+    Core/Src/retarget.c
 )
 
 # Add include paths
